pkg/chisel/testdata/errors/04_unterminated_block_comment.chisel
/* this comment never ends
sphere
